--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,33 @@
 #main {
-    width: 90%;
+    width: 100%;
+    max-width: 1200px;
     display: flex;
+    margin: auto;
+    margin-top: 20px;
+}
+
+#titulo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    vertical-align: center;
+}
+
+#titulo h1 {
+    margin-left: 20px;
+}
+
+#titulo img {
+    margin-left: auto;
+}
+
+#intro {
+    margin: 20px;
+    text-align: justify;
+    border-radius: 6px;
+    width: 100%;
+    text-align: justify;
+    border-radius: 8px;
 }
 
 #descricao-card {
@@ -8,18 +35,11 @@
     text-align: justify;
 }
 
-#intro {
-    width: 100%;
-    margin-right: 64px;
-    text-align: justify;
-    background: #1e3df3;
-}
-
 #card-main {
-    width: 450px;
-    height: 220px;
-    background: #1e3df3;
-    border-radius: 6px;
+    background: whitesmoke;
+    width: 550px;
+    height: 250px;
+    border-radius: 8px;
     margin: 1.5rem;
     display: flex;
     justify-content: center;
