--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ img {
 #descricao a {
     width: 30%;
     height: 60px;
-    background: #00909e;
+    background: #363062;
     border: 0;
     border-radius: 8px;
     color: white;
