--- a/pages/globalPets.css
+++ b/pages/globalPets.css
@@ -19,7 +19,7 @@ body {
     font-family: roboto;
     text-align: center;
     transition: 0.5s ease-in-out;
-    margin-right: 10%;
+    margin-right: 20px;
     margin-bottom: 10%;
 }
 
