--- a/pages/globalPets.css
+++ b/pages/globalPets.css
@@ -58,10 +58,15 @@ body {
     border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px;
     background: #363062;
+    align-items: center;
 }
 
 .card_status img {
     height: 40px;
     width: 40px;
     margin-top: 3.5px;
+}
+
+.card_status a {
+    color: white;
 }
