--- a/pages/globalPets.css
+++ b/pages/globalPets.css
@@ -9,6 +9,8 @@ body {
 
 .card {
     display: grid;
+    max-width: 250px;
+    max-height: 350px;
     grid-template-columns: 250px;
     grid-template-rows: 150px 150px 50px;
     grid-template-areas: "image" "text" "stats";
@@ -18,7 +20,6 @@ body {
     box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.9);
     font-family: roboto;
     text-align: center;
-    transition: 0.5s ease-in-out;
     margin-right: 20px;
     margin-bottom: 10%;
 }
@@ -69,4 +70,25 @@ body {
 
 .card_status a {
     color: white;
+}
+
+.card .info {
+    position: absolute;
+    width: 230px;
+    /*100%*/
+    height: 350px;
+    background: #4d4c7d;
+    transition: .5s;
+    transform-origin: left;
+    transform: perspective(2000px) rotateY(-90deg);
+}
+
+.card:hover .info {
+    transform: perspective(2000px) rotateY(0deg);
+}
+
+.card li {
+    color: white;
+    list-style: none;
+    margin-top: 10px;
 }
