--- a/pages/globalPets.css
+++ b/pages/globalPets.css
@@ -74,21 +74,28 @@ body {
 
 .card .info {
     position: absolute;
-    width: 230px;
+    width: 250px;
     /*100%*/
-    height: 350px;
+    height: 150px;
     background: #4d4c7d;
+    margin-top: 150px;
     transition: .5s;
-    transform-origin: left;
-    transform: perspective(2000px) rotateY(-90deg);
+    transform-origin: top;
+    transform: perspective(2000px) rotateY(90deg);
 }
 
 .card:hover .info {
     transform: perspective(2000px) rotateY(0deg);
 }
 
+.card ul {
+    margin-top: 20px;
+}
+
 .card li {
     color: white;
+    font-weight: 300;
+    font-size: 14px;
     list-style: none;
     margin-top: 10px;
 }
