--- a/pages/Sobre/styles.css
+++ b/pages/Sobre/styles.css
@@ -1,9 +1,5 @@
 body {
-    background: url(https://www.newhope.com/sites/newhope360.com/files/styles/article_featured_retina/public/pets_0.png?itok=Sr6KmJ_u) no-repeat center top fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+    background: url(https://www.newhope.com/sites/newhope360.com/files/styles/article_featured_retina/public/pets_0.png?itok=Sr6KmJ_u) no-repeat center top;
     overflow: visible;
 }
 
@@ -24,7 +20,6 @@ body {
 h1 {
     color: black;
     text-align: center;
-    margin-top: 20px;
 }
 
 p {
